# CentraleSupelec_turtletrack

./: #CMakeLists.txt#  .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
files/: CMakeLists.txt  create_pos.py  poses.txt  position.txt  record_first_half_good.txt  svm_x.pred  svm_y.pred  test.txt  train_svm.cpp
launch/: camera.launch  camera_axis.launch  camera_axis.launch~  detect.launch  gngt.launch  kalman.launch  kalman_sim.launch  localize.launch  positions.launch  sample.launch  share.launch  turtle_nav_to_goal.launch  turtle_nav_to_goal.launch~
msg/: ArenaPositions.msg  ArenaPositions.msg~  Entities.msg  Entity.msg  PanTilts.msg  PanTilts.msg~  State.msg  States.msg
nodes/: nav_to_goal.py  nav_to_goal_cpp.cpp~
server/: position-client-example  position-server  position-server.cpp
src/: #nav_to_goal.cpp#  KalmanFilter.cpp  KalmanFilter.hpp  detect.cpp  detect.cpp~  gngt.cpp  kalman.cpp  localize.cpp  move_axis.cpp~  nav_points.cpp  nav_to_goal.cpp  pantiltzoom.cpp  pantiltzoom.hpp  position-client-example.cpp  positions.cpp  sampler.cpp  share.cpp  sim2kalman.cpp  test-pantiltzoom.cpp  tracker.cpp  train_svm.cpp
src/nodes/: #nav_to_goal.py#  nav_to_goal_cpp.cpp  nav_to_goal_cpp.cpp~
srv/: pose.srv  track_mode.srv
